--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,18 @@
             <version>4.5.4</version>
         </dependency>
 
+        <!-- JQUERY -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.14</version>
+        </dependency>
+
     </dependencies>
 
     <build>
